--- a/.sauce/config.yml
+++ b/.sauce/config.yml
@@ -22,8 +22,8 @@ suites:
     devices:
       # If set, only device by ID will be queried.
       #- id: <rdc_device_id>
-      - name: "iPhone 11"
-        platformVersion: "14.3"
+      - name: "iPhone.*"
+        platformVersion: "14.6"
         options:
           # If set, only devices with a SIM card will be queried.
           carrierConnectivity: false
