--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 jobs:
   test-xcuitest:
     docker:
-      - image: circleci/node:12.21
+      - image: cimg/node:lts
     steps:
       - checkout
       - saucectl/saucectl-run
