--- a/.sauce/config.yml
+++ b/.sauce/config.yml
@@ -2,7 +2,7 @@ apiVersion: v1alpha
 kind: xcuitest
 sauce:
   region: us-west-1
-  concurrency: 1
+  concurrency: 3
   metadata:
     tags:
       - e2e
@@ -31,6 +31,20 @@ suites:
     testOptions:
       class:
         - DemoAppUITests.DemoAppUITestsLaunchTests
+    devices:
+      # If set, only device by ID will be queried.
+      #- id: <rdc_device_id>
+      - name: "iPhone.*"
+        options:
+          # If set, only devices with a SIM card will be queried.
+          carrierConnectivity: false
+          # Possible values [ANY,PHONE,TABLET]
+          deviceType: ANY
+          # If set, only private devices will be queried.
+          private: false
+  - name: "saucy xcuitest test w/ sharding"
+    shard: concurrency
+    testListFile: tests.txt
     devices:
       # If set, only device by ID will be queried.
       #- id: <rdc_device_id>
