--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ env:
   APP: DemoApp.ipa
   TEST_APP: DemoAppUITests-Runner.ipa
   GITHUB_TOKEN: ${{ github.token }}
+  TEST_LIST_FILE: test_classes.txt
 
 jobs:
   build:
@@ -48,6 +49,11 @@ jobs:
         with:
           name: DemoApp
           path: DemoApp/build/Build/Products/Debug-iphoneos/*.ipa
+      - name: Upload testListFile
+        uses: actions/upload-artifact@v3
+        with:
+          name: test_classes.txt
+          path: DemoApp/test_classes.txt
 
   test:
     needs: build
@@ -64,3 +70,22 @@ jobs:
         with:
           concurrency: 10
 
+  test-in-parallel:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Download XCUITest Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: DemoApp
+      - name: Download testListFile Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: test_classes.txt
+      - name: Saucectl Run
+        uses: saucelabs/saucectl-run-action@v3
+        with:
+          concurrency: 10
+          config-file: .sauce/sharding-config.yml
