--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,10 +39,24 @@ steps:
       saucectl --version
 
 - task: CmdLine@2
-  displayName: 'Saucectl RUN - Config Driven'
+  displayName: 'Saucectl RUN'
   inputs:
     script: |
-      saucectl run
+      saucectl run --ccy 10
+  env:
+    # Don't forget to define those secret variables into the pipeline configuration.
+    # https://learn.microsoft.com/en-us/azure/devops/pipelines/process/set-secret-variables?view=azure-devops&tabs=yaml%2Cbash#secret-variable-in-the-ui
+    SAUCE_USERNAME: $(sauceUsername)
+    SAUCE_ACCESS_KEY: $(sauceAccessKey)
+    APP: DemoApp/build/Build/Products/Debug-iphoneos/DemoApp.app
+    TEST_APP: DemoApp/build/Build/Products/Debug-iphoneos/DemoAppUITests-Runner.app
+    TEST_LIST_FILE=DemoApp/test_classes.txt: DemoApp/test_classes.txt
+
+- task: CmdLine@2
+  displayName: 'Saucectl RUN - Shared'
+  inputs:
+    script: |
+      saucectl run --ccy 10 --config ./.sauce/sharding-config.yml
   env:
     # Don't forget to define those secret variables into the pipeline configuration.
     # https://learn.microsoft.com/en-us/azure/devops/pipelines/process/set-secret-variables?view=azure-devops&tabs=yaml%2Cbash#secret-variable-in-the-ui
