--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ steps:
     SAUCE_ACCESS_KEY: $(sauceAccessKey)
     APP: DemoApp/build/Build/Products/Debug-iphoneos/DemoApp.app
     TEST_APP: DemoApp/build/Build/Products/Debug-iphoneos/DemoAppUITests-Runner.app
-    TEST_LIST_FILE=DemoApp/test_classes.txt: DemoApp/test_classes.txt
+    TEST_LIST_FILE: DemoApp/test_classes.txt
 
 - task: CmdLine@2
   displayName: 'Saucectl RUN - Shared'
