--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,4 +64,4 @@ steps:
     SAUCE_ACCESS_KEY: $(sauceAccessKey)
     APP: DemoApp/build/Build/Products/Debug-iphoneos/DemoApp.app
     TEST_APP: DemoApp/build/Build/Products/Debug-iphoneos/DemoAppUITests-Runner.app
-    TEST_LIST_FILE=DemoApp/test_classes.txt: DemoApp/test_classes.txt
+    TEST_LIST_FILE: DemoApp/test_classes.txt
