--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ env:
   APP: DemoApp.ipa
   TEST_APP: DemoAppUITests-Runner.ipa
   GITHUB_TOKEN: ${{ github.token }}
-  TEST_LIST_FILE: test_classes.txt
+  TEST_LIST_FILE: test_classes_and_tests.txt
 
 jobs:
   build:
@@ -52,8 +52,8 @@ jobs:
       - name: Upload testListFile
         uses: actions/upload-artifact@v3
         with:
-          name: test_classes.txt
-          path: DemoApp/test_classes.txt
+          name: test_classes_and_tests.txt
+          path: DemoApp/test_classes_and_tests.txt
 
   test:
     needs: build
@@ -83,7 +83,7 @@ jobs:
       - name: Download testListFile Artifacts
         uses: actions/download-artifact@v3
         with:
-          name: test_classes.txt
+          name: test_classes_and_tests.txt
       - name: Saucectl Run
         uses: saucelabs/saucectl-run-action@v3
         with:
