make build and region configurable

--- a/gitpod/.sauce/config.yml
+++ b/gitpod/.sauce/config.yml
@@ -9,7 +9,7 @@ sauce:
       - e2e
       - release team
       - other tag
-    build: Gitpod Build $DATE_TIME 
+    build: $BUILD 
 
 xcuitest:
   app: $APP
