feat: Support XCUITest simulator test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ orbs:
   saucectl: saucelabs/saucectl-run@1.0.0
 
 jobs:
-  build:
+  build-for-rdc:
     macos:
       xcode: "14.2"
     steps:
@@ -35,7 +35,37 @@ jobs:
             - DemoApp.ipa
             - DemoAppUITests-Runner.ipa
             - test_classes_and_tests.txt
-  test-xcuitest:
+  build-for-simulator:
+    macos:
+      xcode: "14.2"
+    steps:
+      - checkout
+      - run:
+          command: |
+            cd DemoApp
+            xcodebuild \
+              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
+              clean build-for-testing \
+              -project DemoApp.xcodeproj \
+              -scheme "DemoApp" \
+              -sdk iphoneos \
+              -configuration Debug \
+              -derivedDataPath build
+            pushd build/Build/Products/Debug-iphonesimulator
+            mkdir Payload
+            cp -r DemoApp.app Payload
+            zip --symlinks -r DemoApp.ipa Payload
+            rm -rf Payload; mkdir Payload
+            cp -r DemoAppUITests-Runner.app Payload/
+            zip --symlinks -r DemoAppUITests-Runner.ipa Payload
+            mv *.ipa ../../../../../
+            popd
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - DemoApp.ipa
+            - DemoAppUITests-Runner.ipa
+  test-xcuitest-on-rdc:
     docker:
       - image: cimg/node:lts
     environment:
@@ -60,15 +90,30 @@ jobs:
           at: ./
       - saucectl/saucectl-run:
           config-file: .sauce/sharding-config.yml
-
+  test-xcuitest-on-simulator:
+    docker:
+      - image: cimg/node:lts
+    environment:
+      APP: DemoApp.ipa
+      TEST_APP: DemoAppUITests-Runner.ipa
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ./
+      - saucectl/saucectl-run:
+          config-file: .sauce/simulator-config.yml
 workflows:
   version: 2
   default_workflow:
     jobs:
-      - build
+      - build-for-rdc
+      - build-for-simulator
       - test-xcuitest:
           requires:
-            - build
+            - build-for-rdc
       - test-xcuitest-in-parallel:
           requires:
-            - build
+            - build-for-rdc
+      - test-xcuitest-on-simulator:
+          requires:
+            - build-for-simulator
