--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ env:
   TEST_LIST_FILE: test_classes_and_tests.txt
 
 jobs:
-  build:
+  build-for-rdc:
     runs-on: macos-12
     env:
       xcode-version: 14.2
@@ -55,8 +55,43 @@ jobs:
           name: test_classes_and_tests.txt
           path: DemoApp/test_classes_and_tests.txt
 
+  build-for-simulator:
+    runs-on: macos-12
+    env:
+      xcode-version: 14.2
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup XCode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: ${{ env.xcode-version }}
+      - name: Build XCUITest Artifacts
+        working-directory: DemoApp/
+        run: |
+          xcodebuild \
+            CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO \
+            clean build-for-testing \
+            -project DemoApp.xcodeproj \
+            -scheme "DemoApp" \
+            -sdk iphonesimulator \
+            -configuration Debug \
+            -derivedDataPath build
+          cd build/Build/Products/Debug-iphonesimulator
+          mkdir Payload
+          cp -r DemoApp.app Payload
+          zip --symlinks -r DemoApp.ipa Payload
+          rm -rf Payload; mkdir Payload
+          cp -r DemoAppUITests-Runner.app Payload/
+          zip --symlinks -r DemoAppUITests-Runner.ipa Payload
+      - name: Upload ipa files
+        uses: actions/upload-artifact@v3
+        with:
+          name: DemoApp
+          path: DemoApp/build/Build/Products/Debug-iphonesimulator/*.ipa
+
   test:
-    needs: build
+    needs: build-for-rdc
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -71,7 +106,7 @@ jobs:
           concurrency: 10
 
   test-in-parallel:
-    needs: build
+    needs: build-for-rdc
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -89,3 +124,19 @@ jobs:
         with:
           concurrency: 10
           config-file: .sauce/sharding-config.yml
+
+  test-with-simulator:
+    needs: build-for-simulator
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Download XCUITest Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: DemoApp
+      - name: Saucectl Run
+        uses: saucelabs/saucectl-run-action@v3
+        with:
+          concurrency: 10
+          config-file: .sauce/simulator-config.yml
