--- a/.sauce/config.yml
+++ b/.sauce/config.yml
@@ -49,3 +49,7 @@ artifacts:
     match:
       - "junit.xml"
     directory: ./artifacts/
+
+reporters:
+  spotlight: # Prints an overview of failed or otherwise interesting jobs.
+    enabled: true
